<resources>
    <string name="app_name" translatable="false">Calendouer</string>
    <string name="about">关于</string>
    <string name="setting">设置</string>
    <string name="lunar_date" translatable="false">农历%1$s%2$s</string>
    <string name="weather" translatable="false">%1$s\n%2$s\u2103 | %3$s\u2103</string>
    <string name="weather_high_low" translatable="false">%1$s\u2103 | %2$s\u2103</string>
    <string name="rationale_location">位置信息仅用于天气预报</string>
    <string name="getWeatherInfo">获取天气信息</string>
    <string name="permission">权限请求</string>
    <string name="grant">同意授权</string>
    <string name="deny">拒绝</string>
    <string name="ok">确定</string>

    <string name="getTop250">初始化电影推荐</string>

    <string name="downloading">正在下载电影数据....</string>
    <string name="downloaded">下载完成</string>
    <string name="createDB">正在创建本地数据库....</string>
    <string name="arrangeData">正在整理数据....</string>
    <string name="api_error">豆瓣数据请求失败</string>

    <string name="pref_about_calendouer">关于豆瓣日历</string>
    <string name="pref_version">版本</string>
    <string name="version" translatable="false">2.0.1</string>
    <string name="about_content" translatable="false">Calendouer一词取自Calendar和Doubaner。Calendouer是一款日历应用，提供阴历和阳历日期，天气预报信息。Calendouer也是一款电影／图书推荐应用，提供精彩的观影剧目和阅读书目。</string>
    <string name="location_error">无法定位</string>
    <string name="initMovieRecommended">初始化电影推荐</string>
    <string name="unknown_weahter">未知天气</string>
    <string name="last_update">更新: %1$s</string>
    <string name="weather_info">%1$s转%2$s</string>
    <string name="close">关闭</string>
    <string name="weather_preview">3日天气预报</string>
    <string name="what_new">更新内容</string>
    <string name="update_content">✱ 更新样式，应用主题跟随天气情况而变化\n✱ 定时刷新与缓存天气预报\n✱ 优化电影推荐模式\n✱ 添加事情备忘并及时收到提醒，可将推荐电影写入备忘</string>

    <string name="pref_card_settings">卡片设置</string>
    <string name="pref_title_things">事情备忘</string>
    <string name="today_movie">今日推荐</string>
    <string name="pref_title_weather">天气预报</string>
    <string name="open_location">开启定位服务</string>
    <string name="open_location_setting">定位设置</string>
    <string name="weather_update_frequency">天气更新频率</string>
    <string name="update_frequency">更新频率</string>
    <string name="update_frequency_default" translatable="false">2</string>
    <string name="need_location_premission">需要定位权限</string>

    <array name="update_frequency_entries">
        <item>每2小时</item>
        <item>每4小时</item>
        <item>每6小时</item>
        <item>每8小时</item>
    </array>

    <array name="update_frequency_values">
        <item>"2"</item>
        <item>"4"</item>
        <item>"6"</item>
        <item>"8"</item>
    </array>
    <string name="pref_you_may_like_movie">猜你喜欢</string>
    <string name="douban_group">去豆瓣小组畅聊</string>
    <string name="pref_rate">去评分</string>
    <string name="google_play" translatable="false">Google Play</string>
    <string name="things">事情备忘</string>
    <string name="all_things_have_done">所有事情都已处理</string>

    <string name="download_movie_data">下载电影数据</string>
    <string name="download_tips">这需要耗费些许流量,继续下载吗</string>
    <string name="cancel">取消</string>

    <string name="directors">导演：%1$s</string>
    <string name="casts">主演：%1$s</string>
    <string name="ratings_count">共 %1$s 人评分</string>
    <string name="transition.movie.cover" translatable="false">TRANSITION MOVIE COVER</string>

    <string name="things_date_show">%1$s月%2$s日%3$s</string>
    <string name="things_time_show">%1$s:%2$s</string>
    <string name="default_date_picker">%1$s年%2$s月%3$s日%4$s</string>
    <string name="default_time_picker">%1$s:%2$s</string>
    <string name="action_save">保存</string>
    <string name="add_things_do">事情内容…</string>
    <string name="add_things_do_movie">#电影# %1$s</string>
    <string name="content_require">请填写事情内容</string>
    <string name="error">发生错误</string>
    <string name="things_view_all">所有事情</string>
    <string name="things_notification">通知</string>
    <string name="things_ringtone">铃声</string>
    <string name="things_vibrate">振动</string>

    <string name="weather_title">天气</string>
    <string name="movie_title">电影</string>
    <string name="things_title">事情</string>
    <string name="things_notification_datetime">设置提醒时间</string>
    <string name="goto_douban">去豆瓣</string>
    <string name="movie_like">喜欢</string>
    <string name="introduction">简介</string>
    <string name="snackbar_thing_delete">已删除 \"%1$s\"</string>
    <string name="revoke">撤销</string>
    <string name="delete">删除</string>
    <string name="mark_done">标记为完成</string>
    <string name="delete_confirm">你确定要删除该备忘事情吗</string>
    <string name="snackbar_thing_done">已完成 \"%1$s\"</string>
    <string name="retry">重试</string>
    <string name="weather_error">请求天气失败</string>
    <string name="douban_error">豆瓣服务器开小差了</string>
    <string name="native_ad_unit_id" translatable="false">ca-app-pub-6993844563211839/9791767307</string>
    <string name="support_developer">支持开发者</string>
    <string name="ad_title">广告</string>
    <string name="pref_open_source_license">开源许可</string>
    <string name="update_weather">更新天气</string>
    <string name="weather_updating">更新天气中…</string>
    <string name="weather_update_too_often">天气信息不会变化这么快，5分钟后再试</string>
    <string name="location_city">当前城市</string>
    <string name="manual_location">手动选择城市</string>
    <string name="restore_ad">开启广告</string>
    <string name="after_ad_closed_beg">广告已关闭，以另一种方式支持我们?</string>
    <string name="chip_director">导演/%1$s</string>
    <string name="chip_casts">演员/%1$s</string>
    <string name="chip_genres">类型/%1$s</string>
    <string name="chip_same_name">同名作</string>
    <string name="all">全部</string>
    <string name="transition.poster">TRANSITION_POSTER</string>
    <string name="collect_num">%1$s 人想看</string>
    <string name="all_movie">共 %1$s 部</string>
    <string name="coming_soon">即将上映</string>
    <string name="in_theaters">正在热映</string>
    <string name="pin_active_info">已固定，"今日推荐"不再更新</string>
    <string name="pin_inactive_info">取消固定，"今日推荐"恢复更新</string>
    <string name="tomorrow">明天</string>
    <string name="day_after_tomorrow">后天</string>
    <string name="like_movie_already_exist">推荐列表中已存在</string>
    <string name="like_movie_success">成功添加到推荐列表</string>
</resources>

