<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <header
        android:id="@+id/cards"
        android:fragment="cn.sealiu.calendouer.SettingsActivity$CardPreferenceFragment"
        android:icon="@drawable/ic_card_24dp"
        android:title="@string/pref_card_settings" />

    <header
        android:id="@+id/about"
        android:icon="@drawable/ic_info_24dp"
        android:title="@string/pref_about_calendouer" />

    <header
        android:id="@+id/open"
        android:icon="@drawable/ic_open_source"
        android:title="@string/pref_open_source_license" />

    <header
        android:id="@+id/rating"
        android:icon="@drawable/ic_shop_24dp"
        android:summary="@string/google_play"
        android:title="@string/pref_rate" />

    <header
        android:id="@+id/version"
        android:icon="@drawable/ic_version_24dp"
        android:summary="@string/version"
        android:title="@string/pref_version" />
</preference-headers>
