<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.sealiu.calendouer.CelebrityActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.AppBarOverlay" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/celebrity_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/celebrity_name"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_vertical_margin"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin">

                    <ImageView
                        android:id="@+id/celebrity_image"
                        android:layout_width="90dp"
                        android:layout_height="135dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/activity_vertical_margin"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:scaleType="fitCenter"
                        android:src="@mipmap/poster" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/celebrity_image"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/born_place"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/aka_en"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/aka"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/goto_douban"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_alignBottom="@+id/celebrity_image"
                        android:layout_marginBottom="4dp"
                        android:layout_toRightOf="@+id/celebrity_image"
                        android:background="@drawable/round_border"
                        android:drawableLeft="@drawable/ic_launch_24dp"
                        android:drawablePadding="4dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/goto_douban"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/lightBg" />

            </LinearLayout>

            <TextView
                android:id="@+id/subject_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin"
                android:textColor="@color/primaryText"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/subject_loading"
                style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_vertical_margin" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/subject_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"
                tools:listitem="@layout/work_item" />

            <Button
                android:id="@+id/subject_more"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/subject_more"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/rating_us_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/textOrIcons"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="visible">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1"
                    ads:srcCompat="@drawable/ic_user" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/after_ad_closed_beg" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/after_ad_closed_rate"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="4dp"
                            android:text="@string/pref_rate"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent" />

                        <Button
                            android:id="@+id/after_ad_closed_restore"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="4dp"
                            android:paddingLeft="16dp"
                            android:paddingRight="16dp"
                            android:paddingTop="4dp"
                            android:text="@string/restore_ad"
                            android:textAllCaps="false"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                ads:adSize="320x150"
                ads:adUnitId="@string/native_ad_unit_id" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
