<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:id="@+id/movie_recommended_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/bs_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@mipmap/poster" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:minHeight="150dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/bs_rating__average"
                        style="@style/TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="40sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@+id/bs_rating__average"
                        android:layout_toRightOf="@+id/bs_rating__average"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/bs_movie_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp" />

                        <LinearLayout
                            android:id="@+id/bs_rating__stars_holder"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/bs_celebrity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/bs_ratings_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|end"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/bs_goto_douban"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/round_border"
                        android:drawableLeft="@drawable/ic_launch_24dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/goto_douban"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/bs_like_movie"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/round_border"
                        android:drawableLeft="@drawable/ic_favorite_24dp"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/movie_like"
                        android:textAllCaps="false"
                        android:textColor="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/introduction"
            android:textColor="@color/secondaryText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/bs_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end" />

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>